src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <formula>Text(Account.Priority__c)</formula>
        <label>Account Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To change the Account Type, edit on Account tab.</inlineHelpText>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activate_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Used to identify when the Contact was Activated for the GSA Platform</description>
        <inlineHelpText>Used to identify when the Contact was Activated for the GSA Platform</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory_Last_Interaction_Date__c</fullName>
        <label>Advisory Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliate_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AskNicely_Survey_Sent_Date__c</fullName>
        <label>AskNicely Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Assistant_to</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attended_Training_Date__c</fullName>
        <label>Attended Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Multi__c</fullName>
        <label>Billing Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>US News</fullName>
                </value>
                <value>
                    <fullName>React News</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>React Advertising</fullName>
                </value>
                <value>
                    <fullName>US News Advertising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blog_and_Market_Currents_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blog and Market Currents Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_Contact__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Segment_Contact__c</fullName>
        <description>Account Client Segment field mapped to the contact page</description>
        <formula>TEXT( Account.Client_Segment__c )</formula>
        <label>Client Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Segment__c</fullName>
        <label>Company Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type_Contact__c</fullName>
        <description>Account company Type on contact page</description>
        <formula>TEXT(Account.Company_Type__c)</formula>
        <label>Company Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Owners_Match__c</fullName>
        <formula>Account.Owner.Id =  Owner.Id</formula>
        <label>Contact &amp; Account Owners Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <label>Former</label>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Use_Case__c</fullName>
        <label>Contact Use Case</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Products_Text__c</fullName>
        <formula>IF(INCLUDES(Current_Products__c,&quot;Asset-Backed Alert&quot;),&quot;Asset-Backed Alert; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;Commercial Mortgage Alert&quot;),&quot;Commercial Mortgage Alert; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;Real Estate Alert&quot;),&quot;Real Estate Alert; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;Pan-European Research + Market Data &amp; Deals&quot;),&quot;Pan-European Research + Market Data &amp; Deals; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;Pan-European Research + REIT Data&quot;),&quot;Pan-European Research + REIT Data; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;US Portfolio Tools&quot;),&quot;US Portfolio Tools; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;US Research + Market Data &amp; Deals&quot;),&quot;US Research + Market Data &amp; Deals; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;US Research + REIT Data&quot;),&quot;US Research + REIT Data; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;React News&quot;),&quot;React News; &quot;,null)+
IF(INCLUDES(Current_Products__c,&quot;US Sales Comps&quot;),&quot;US Sales Comps, &quot;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Products (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Products__c</fullName>
        <label>Current Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_RE_Research_Lacking_Other__c</fullName>
        <inlineHelpText>If other, please elaborate (open text)</inlineHelpText>
        <label>Current RE Research Lacking (Other)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>IF(ISBLANK(TEXT(Contact_Status__c)), &quot;&quot;, TEXT(Contact_Status__c)&amp;&quot; - &quot;&amp; TExt(Usage_Status__c))</formula>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User__c</fullName>
        <formula>User__r.Id = $User.Id</formula>
        <label>Current User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataLink_Access_Del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DataLink Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Important *technical* contact as it relates to data provision to this account, eg API, DataLink etc. May or may not also be a Current end user.</inlineHelpText>
        <label>Data Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Datalink_Access_New__c</fullName>
        <formula>Account.DataLink_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Datalink Access (New)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Date__c</fullName>
        <description>Used to identify when the Contact was Deactivated for the GSA Platform</description>
        <inlineHelpText>Used to identify when the Contact was Deactivated for the GSA Platform</inlineHelpText>
        <label>Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_New__c</fullName>
        <description>For back end filtering on list views</description>
        <label>Description (New)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Medium_Contact__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Digital Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Source_Contact__c</fullName>
        <description>For HubSpot Reporting</description>
        <label>Digital Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Username_Misaligned__c</fullName>
        <formula>LOWER(Email) &lt;&gt; LOWER(Username__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email &amp; Username Misaligned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>European_CPPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>European CPPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>European_Webinars_and_Featured_Insights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>European Webinars and Featured Insights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firms_AUM_Portfolio_Size_Mktg_Identified__c</fullName>
        <inlineHelpText>What is your firm’s AUM (Assets Under Management)/portfolio size?</inlineHelpText>
        <label>Firms AUM/Portfolio Size Mktg Identified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0</fullName>
                </value>
                <value>
                    <fullName>Up to $500M</fullName>
                </value>
                <value>
                    <fullName>$500M - $1B</fullName>
                </value>
                <value>
                    <fullName>$1B - $2B</fullName>
                </value>
                <value>
                    <fullName>$2B - $5B</fullName>
                </value>
                <value>
                    <fullName>Greater than $5B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Client__c</fullName>
        <label>Former Client?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName&amp;&quot; &quot;&amp;LastName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Analyst__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA Analyst</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_CDB_Contact_URL__c</fullName>
        <label>GSA CDB Contact URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GSA_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>GSA Contact ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSA_ID_Auto1__c</fullName>
        <label>GSA ID Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GSA_ID__c</fullName>
        <formula>IF
(ISBLANK( GSA_Contact_ID__c ), (  GSA_ID_Auto1__c  ), (GSA_Contact_ID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSA ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Relationship__c</fullName>
        <description>GSA relationship from account page</description>
        <formula>Text(Account.Type)</formula>
        <label>GSA Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Start_Date__c</fullName>
        <inlineHelpText>Date Employee is starting with Green Street</inlineHelpText>
        <label>GS Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geographies_of_Interest_Mktg_Identified__c</fullName>
        <inlineHelpText>Which geographic regions are of interest to you? Check all that apply.</inlineHelpText>
        <label>Geographies of Interest Mktg Identified</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U.S. and Canada</fullName>
                </value>
                <value>
                    <fullName>United Kingdom/Continental Europe</fullName>
                </value>
                <value>
                    <fullName>Mexico and South America</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Asia (Including India)</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Street_User_Department__c</fullName>
        <label>Green Street User: Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Street_User_Phone__c</fullName>
        <label>Green Street User: Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Green_Street_User_Title__c</fullName>
        <label>Green Street User: Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Important contacts as it relates to commercial side of relationship (Example: renewal contact(s), vendor manager, contract signatories)</inlineHelpText>
        <label>Key Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__No_longer_at_Company__c</fullName>
        <inlineHelpText>Field automatically updated by LinkedIn Sales Navigator Data Validation. “Not at Company” means Contact is not with associated Account based on LinkedIn profile. No value indicates LinkedIn has no feedback to share.</inlineHelpText>
        <label>Not at Company Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not at Company</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Pursue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Session_Id__c</fullName>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date_standard__c</fullName>
        <description>used in reports to ensure onboarding data is updated accurately</description>
        <formula>Last_Login_Date__c</formula>
        <label>Last Login Date - standard</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Seen_on_Internal_Site__c</fullName>
        <label>Last Seen on Internal Site</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_Membership__c</fullName>
        <description>Assign this prospect to one or multiple lists</description>
        <inlineHelpText>Designate this contact to a list for easy prospect aggregation</inlineHelpText>
        <label>List Membership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Identified_Country_contact__c</fullName>
        <label>Marketing Identified Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire Saint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Identified_State_contact__c</fullName>
        <label>Marketing Identified State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>British Columbia</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mass_Deactivate__c</fullName>
        <label>Mass Deactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_User_Date__c</fullName>
        <label>New User Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_to_Qualified__c</fullName>
        <formula>Attended_Training_Date__c - New_User_Date__c</formula>
        <label>New to Qualified</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_ID__c</fullName>
        <externalId>true</externalId>
        <label>News ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Outreach_Date__c</fullName>
        <label>Next Outreach Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Use this field to add information regarding what to do next to move this prospect along in the sales process.</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Acq_Disp_Executed_Per_Year__c</fullName>
        <inlineHelpText>How many acquisitions/dispositions does your firm typically execute in a year?</inlineHelpText>
        <label>Number of Acq/Disp Executed Per Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registrant</fullName>
                </value>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Qualified User</fullName>
                </value>
                <value>
                    <fullName>Existing User</fullName>
                </value>
                <value>
                    <fullName>Qualified Survey Respondent</fullName>
                </value>
                <value>
                    <fullName>Nonresponsive Registrant</fullName>
                </value>
                <value>
                    <fullName>News Only Qualified</fullName>
                </value>
                <value>
                    <fullName>Inactive User</fullName>
                    <isActive>false</isActive>
                    <label>Inactive User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>